--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Mentor | Room homepage</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="./src/css/main.css">
+    <link rel="stylesheet" href="./src/css/main.min.css">
 </head>
 
 <body class="container">
@@ -58,71 +58,69 @@
         </button>
     </div>
 
-    <main>
-        <section class="info">
-            <div class="info--1">
-                <h1>Discover innovative ways to decorate</h1>
-                <p>We provide unmatched quality, comfort, and style for property owners across the country.
-                    Our experts combine form and function in bringing your vision to life.Create a room in your own
-                    style with our collection and make your property a reflection of you and what you love.</p>
-                <button type="button" class="shop-btn btn">
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
-                    <!-- img tag doesn't work with css fill property -->
-                    <!-- <img src="./images/icon-arrow.svg" alt="arrow icon" class="shop-btn__icon" /> -->
-                    <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
-                        <path
-                            d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
-                            fill="#000" fill-rule="nonzero" />
-                    </svg>
-                </button>
+    <section class="info">
+        <div class="info--1">
+            <h1>Discover innovative ways to decorate</h1>
+            <p>We provide unmatched quality, comfort, and style for property owners across the country.
+                Our experts combine form and function in bringing your vision to life.Create a room in your own
+                style with our collection and make your property a reflection of you and what you love.</p>
+            <button type="button" class="shop-btn btn">
+                <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
+                <!-- img tag doesn't work with css fill property -->
+                <!-- <img src="./images/icon-arrow.svg" alt="arrow icon" class="shop-btn__icon" /> -->
+                <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
+                    <path
+                        d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+                        fill="#000" fill-rule="nonzero" />
+                </svg>
+            </button>
+        </div>
+        <div class="info--2">
+            <h1>We are available all across the globe</h1>
+            <p>With stores all over the world, it's easy for you to find furniture for your home or place of
+                business. Locally, we’re in most major cities throughout the country. Find the branch nearest you
+                using our store locator. Any questions? Don't hesitate to contact us today.</p>
+            <button type="button" class="shop-btn btn">
+                <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
+                <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
+                    <path
+                        d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+                        fill="#000" fill-rule="nonzero" />
+                </svg>
+            </button>
+        </div>
+        <div class="info--3">
+            <h1> Manufactured with the best materials</h1>
+            <p>Our modern furniture store provide a high level of quality. Our company has invested in advanced
+                technology to ensure that every product is made as perfect and as consistent as possible. With three
+                decades of experience in this industry, we understand what customers want for their home and office.
+            </p>
+            <div class="info__sjop">
+                <a href="#" target="_blank" rel="noopener noreferrer" class="info__shop-link">shop now</a>
+                <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
+                    <path
+                        d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
+                        fill="#000" fill-rule="nonzero" />
+                </svg>
             </div>
-            <div class="info--2">
-                <h1>We are available all across the globe</h1>
-                <p>With stores all over the world, it's easy for you to find furniture for your home or place of
-                    business. Locally, we’re in most major cities throughout the country. Find the branch nearest you
-                    using our store locator. Any questions? Don't hesitate to contact us today.</p>
-                <button type="button" class="shop-btn btn">
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
-                    <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
-                        <path
-                            d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
-                            fill="#000" fill-rule="nonzero" />
-                    </svg>
-                </button>
-            </div>
-            <div class="info--3">
-                <h1> Manufactured with the best materials</h1>
-                <p>Our modern furniture store provide a high level of quality. Our company has invested in advanced
-                    technology to ensure that every product is made as perfect and as consistent as possible. With three
-                    decades of experience in this industry, we understand what customers want for their home and office.
-                </p>
-                <div class="info__sjop">
-                    <a href="#" target="_blank" rel="noopener noreferrer" class="info__shop-link">shop now</a>
-                    <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
-                        <path
-                            d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
-                            fill="#000" fill-rule="nonzero" />
-                    </svg>
-                </div>
-            </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="about">
-            <div class="about__picture--1">
-                <img src="./images/image-about-dark.jpg" alt="image-about-dark">
-            </div>
-            <div class="about__info">
-                <h2>About our furniture</h2>
-                <p>Our multifunctional collection blends design and function to suit your individual taste. Make each
-                    room unique, or pick a cohesive theme that best express your interests and what inspires you. Find
-                    the furniture pieces you need, from traditional to contemporary styles or anything in between.
-                    Product specialists are available to help you create your dream space.</p>
-            </div>
-            <div class="about__picture--2">
-                <img src="./images/image-about-light.jpg" alt="image-about-light">
-            </div>
-        </section>
-    </main>
+    <section class="about">
+        <div class="about__picture--1">
+            <img src="./images/image-about-dark.jpg" alt="image-about-dark">
+        </div>
+        <div class="about__info">
+            <h2>About our furniture</h2>
+            <p>Our multifunctional collection blends design and function to suit your individual taste. Make each
+                room unique, or pick a cohesive theme that best express your interests and what inspires you. Find
+                the furniture pieces you need, from traditional to contemporary styles or anything in between.
+                Product specialists are available to help you create your dream space.</p>
+        </div>
+        <div class="about__picture--2">
+            <img src="./images/image-about-light.jpg" alt="image-about-light">
+        </div>
+    </section>
 
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
