--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Mentor | Room homepage</title>
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-    <link rel="stylesheet" href="./src/css/main.min.css">
+    <link rel="stylesheet" href="./src/css/main.css">
 </head>
 
 <body class="container">
@@ -31,17 +31,17 @@
         </nav>
 
         <div class="slider">
-            <picture class="slider__pictures--1">
+            <picture class="slider__pictures--1 slider__pictures">
                 <source media="(max-width: 47.99em)" srcset="./images/mobile-image-hero-1.jpg">
                 <source media="(min-width: 48em)" srcset="./images/desktop-image-hero-1.jpg">
                 <img src="./images/desktop-image-hero-1.jpg" alt="hero-1">
             </picture>
-            <picture class="slider__pictures--2">
+            <picture class="slider__pictures--2 slider__pictures">
                 <source media="(max-width: 47.99em)" srcset="./images/mobile-image-hero-2.jpg">
                 <source media="(min-width: 48em)" srcset="./images/desktop-image-hero-2.jpg">
                 <img src="./images/desktop-image-hero-2.jpg" alt="hero-2">
             </picture>
-            <picture class="slider__pictures--3">
+            <picture class="slider__pictures--3 slider__pictures">
                 <source media="(max-width: 47.99em)" srcset="./images/mobile-image-hero-3.jpg">
                 <source media="(min-width: 48em)" srcset="./images/desktop-image-hero-3.jpg">
                 <img src="./images/desktop-image-hero-3.jpg" alt="hero-3">
@@ -59,7 +59,7 @@
     </div>
 
     <section class="info">
-        <div class="info--1">
+        <div class="info--1 info__slider">
             <h1>Discover innovative ways to decorate</h1>
             <p>We provide unmatched quality, comfort, and style for property owners across the country.
                 Our experts combine form and function in bringing your vision to life.Create a room in your own
@@ -75,7 +75,7 @@
                 </svg>
             </button>
         </div>
-        <div class="info--2">
+        <div class="info--2 info__slider">
             <h1>We are available all across the globe</h1>
             <p>With stores all over the world, it's easy for you to find furniture for your home or place of
                 business. Locally, we’re in most major cities throughout the country. Find the branch nearest you
@@ -89,7 +89,7 @@
                 </svg>
             </button>
         </div>
-        <div class="info--3">
+        <div class="info--3 info__slider">
             <h1> Manufactured with the best materials</h1>
             <p>Our modern furniture store provide a high level of quality. Our company has invested in advanced
                 technology to ensure that every product is made as perfect and as consistent as possible. With three
@@ -107,9 +107,7 @@
     </section>
 
     <section class="about">
-        <div class="about__picture--1">
-            <img src="./images/image-about-dark.jpg" alt="image-about-dark">
-        </div>
+        <img src="./images/image-about-dark.jpg" alt="image-about-dark" class="about__picture--1">
         <div class="about__info">
             <h2>About our furniture</h2>
             <p>Our multifunctional collection blends design and function to suit your individual taste. Make each
@@ -117,9 +115,7 @@
                 the furniture pieces you need, from traditional to contemporary styles or anything in between.
                 Product specialists are available to help you create your dream space.</p>
         </div>
-        <div class="about__picture--2">
-            <img src="./images/image-about-light.jpg" alt="image-about-light">
-        </div>
+        <img src="./images/image-about-light.jpg" alt="image-about-light" class="about__picture--2">
     </section>
 
     <div class="attribution">
