--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 technology to ensure that every product is made as perfect and as consistent as possible. With three
                 decades of experience in this industry, we understand what customers want for their home and office.
             </p>
-            <div class="info__sjop">
-                <a href="#" target="_blank" rel="noopener noreferrer" class="info__shop-link">shop now</a>
+            <button type="button" class="shop-btn btn">
+                <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
                 <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
                     <path
                         d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
                         fill="#000" fill-rule="nonzero" />
                 </svg>
-            </div>
+            </button>
         </div>
     </section>
 
