--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Mentor | Room homepage</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
     <link rel="stylesheet" href="./src/css/main.css">
 </head>
 
@@ -14,11 +14,11 @@
     <header class="header">
         <nav class="navigation">
             <div class="navigation__icon">
-                <img src="./images/icon-hamburger.svg" alt="hamburger icon" class="navigation__icon--hamburger">
-                <img src="./images/icon-close.svg" alt="close icon" class="navigation__icon--close hidden">
+                <img src="./src/images/icon-hamburger.svg" alt="hamburger icon" class="navigation__icon--hamburger">
+                <img src="./src/images/icon-close.svg" alt="close icon" class="navigation__icon--close hidden">
             </div>
 
-            <img src="./images/logo.svg" alt="room logo" class="navigation__logo">
+            <img src="./src/images/logo.svg" alt="room logo" class="navigation__logo">
 
             <ul class="navigation__list hidden">
                 <li class="navigation__link"><a href="#">home</a></li>
@@ -32,29 +32,29 @@
 
         <div class="slider">
             <picture class="slider__pictures--1 slider__pictures">
-                <source media="(max-width: 47.99em)" srcset="./images/mobile-image-hero-1.jpg">
-                <source media="(min-width: 48em)" srcset="./images/desktop-image-hero-1.jpg">
-                <img src="./images/desktop-image-hero-1.jpg" alt="hero-1">
+                <source media="(max-width: 47.99em)" srcset="./src/images/mobile-image-hero-1.jpg">
+                <source media="(min-width: 48em)" srcset="./src/images/desktop-image-hero-1.jpg">
+                <img src="./src/images/desktop-image-hero-1.jpg" alt="hero-1">
             </picture>
             <picture class="slider__pictures--2 slider__pictures">
-                <source media="(max-width: 47.99em)" srcset="./images/mobile-image-hero-2.jpg">
-                <source media="(min-width: 48em)" srcset="./images/desktop-image-hero-2.jpg">
-                <img src="./images/desktop-image-hero-2.jpg" alt="hero-2">
+                <source media="(max-width: 47.99em)" srcset="./src/images/mobile-image-hero-2.jpg">
+                <source media="(min-width: 48em)" srcset="./src/images/desktop-image-hero-2.jpg">
+                <img src="./src/images/desktop-image-hero-2.jpg" alt="hero-2">
             </picture>
             <picture class="slider__pictures--3 slider__pictures">
-                <source media="(max-width: 47.99em)" srcset="./images/mobile-image-hero-3.jpg">
-                <source media="(min-width: 48em)" srcset="./images/desktop-image-hero-3.jpg">
-                <img src="./images/desktop-image-hero-3.jpg" alt="hero-3">
+                <source media="(max-width: 47.99em)" srcset="./src/images/mobile-image-hero-3.jpg">
+                <source media="(min-width: 48em)" srcset="./src/images/desktop-image-hero-3.jpg">
+                <img src="./src/images/desktop-image-hero-3.jpg" alt="hero-3">
             </picture>
         </div>
     </header>
 
     <div class="slide-btn">
         <button class="slides-btn--left btn">
-            <img src="./images/icon-angle-left.svg" alt="left button">
+            <img src="./src/images/icon-angle-left.svg" alt="left button">
         </button>
         <button class="slides-btn--right btn">
-            <img src="./images/icon-angle-right.svg" alt="right button">
+            <img src="./src/images/icon-angle-right.svg" alt="right button">
         </button>
     </div>
 
@@ -67,7 +67,7 @@
             <button type="button" class="shop-btn btn">
                 <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
                 <!-- img tag doesn't work with css fill property -->
-                <!-- <img src="./images/icon-arrow.svg" alt="arrow icon" class="shop-btn__icon" /> -->
+                <!-- <img src="./src/images/icon-arrow.svg" alt="arrow icon" class="shop-btn__icon" /> -->
                 <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
                     <path
                         d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
@@ -107,7 +107,7 @@
     </section>
 
     <section class="about">
-        <img src="./images/image-about-dark.jpg" alt="image-about-dark" class="about__picture--1">
+        <img src="./src/images/image-about-dark.jpg" alt="image-about-dark" class="about__picture--1">
         <div class="about__info">
             <h2>About our furniture</h2>
             <p>Our multifunctional collection blends design and function to suit your individual taste. Make each
@@ -115,7 +115,7 @@
                 the furniture pieces you need, from traditional to contemporary styles or anything in between.
                 Product specialists are available to help you create your dream space.</p>
         </div>
-        <img src="./images/image-about-light.jpg" alt="image-about-light" class="about__picture--2">
+        <img src="./src/images/image-about-light.jpg" alt="image-about-light" class="about__picture--2">
     </section>
 
     <div class="attribution">
