--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
             <p>With stores all over the world, it's easy for you to find furniture for your home or place of
                 business. Locally, we’re in most major cities throughout the country. Find the branch nearest you
                 using our store locator. Any questions? Don't hesitate to contact us today.</p>
-            <button type="button" class="shop-btn btn">
+            <div class="shop-btn btn">
                 <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
                 <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
                     <path
                         d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
                         fill="#000" fill-rule="nonzero" />
                 </svg>
-            </button>
+            </div>
         </div>
         <div class="info--3 info__slider">
             <h1> Manufactured with the best materials</h1>
@@ -95,14 +95,14 @@
                 technology to ensure that every product is made as perfect and as consistent as possible. With three
                 decades of experience in this industry, we understand what customers want for their home and office.
             </p>
-            <button type="button" class="shop-btn btn">
+            <div class="shop-btn btn">
                 <a href="#" target="_blank" rel="noopener noreferrer" class="shop-btn__link">shop now</a>
                 <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="shop-btn__icon">
                     <path
                         d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z"
                         fill="#000" fill-rule="nonzero" />
                 </svg>
-            </button>
+            </div>
         </div>
     </section>
 
